tests/samples/positive/generics/method_local_m3_1.ax
module method_local_m3_1;

struct Box[T] {
    value: T;
}

struct Marker {
    value: i32;
}

impl Marker {
    fn choose[U](self: &Marker, value: U) -> U {
        return value;
    }
}

impl[T] Box[T] {
    fn get(self: &Box[T]) -> T where T: Copy {
        return self.value;
    }

    fn replace[U](self: &Box[T], value: U) -> U {
        return value;
    }
}

fn main() -> i32 {
    let marker: Marker = Marker { value: 3 };
    let box: Box[i32] = Box[i32] { value: 7 };
    let inferred: i32 = marker.choose(4);
    let explicit: bool = marker.choose[bool](true);
    let owner_value: i32 = box.get();
    let local_value: bool = box.replace(false);
    let explicit_local: i32 = box.replace[i32](10);
    if explicit && !local_value {
        return owner_value + inferred + explicit_local - 21;
    }
    return 1;
}
